--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,12 @@ services:
       dockerfile: ./Dockerfile
     restart: always
     env_file: .env
+  telegram-bot:
+    build:
+      context: ./telegram
+      dockerfile: ./Dockerfile
+    restart: always
+    env_file: .env
   postgres:
     env_file: .env
     image: postgres:14-alpine
